[UI] Improve image and video widget url validation
Fixes #4367


Signed-off-by: Pauli Anttila <pauli.anttila@gmail.com>